fixed player stream not showing if only one was in. v0.14.5

--- a/src/public/scss/components/_player.scss
+++ b/src/public/scss/components/_player.scss
@@ -158,7 +158,7 @@
       }
     }
     .mobile {
-      z-index: 0;
+      z-index: 1;
       @include displayFlex;
       flex-direction: row;
       position: absolute;
@@ -221,9 +221,10 @@
 .player-stream {
   @include displayFlex;
   position: relative;
+  width: 100%;
   height: 100%;
   &:hover {
-    z-index: 1;
+    z-index: 2;
   }
   .video, .chat {
     position: relative;
@@ -445,6 +446,7 @@
       > .wrapper {
         .list.video-list {
           .player-stream {
+            width: 100%;
             &:not(.in-view) {
               width: 0;
               height: 0;
